# release-workflows

./: .gitignore  README.md  zizmor.yml
.github/workflows/: ci.yml  cloudsmith-republish.yml  publish-crates.yml  release.yml  selftest.yml
testdata/fixture-cli/: Cargo.toml  LICENSE  README.md  deny.toml
testdata/fixture-cli/crates/fixture-cli/: Cargo.toml
testdata/fixture-cli/crates/fixture-cli/src/: main.rs
